--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.5",
+    "autoprefixer": "^10.4.21",
     "firebase": "^11.6.1",
     "lucide-react": "^0.503.0",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.0.0",
@@ -25,13 +27,13 @@
     "react-router-dom": "^7.5.3",
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
